--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --watch",
+    "server": "nodemon index.js",
+    "start": "node index.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -15,6 +17,7 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.2",
+    "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
   },
