--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-   
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -24,7 +23,7 @@
   "devDependencies": {
     "cross-env": "^6.0.0",
     "jest": "^24.9.0",
-    "nodemon": "^1.19.2",
+    "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
   "keywords": [],
