--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
+    "knex-cleaner": "^1.3.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
