--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
-    "server": "nodemon index.js",
-    "start": "node index.js"
+    "test": "cross-env DB_ENV=testing jest --watch",
+    "start": "node index.js",
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^0.19.0",
