--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
+    "ejs": "^2.7.4",
     "express": "^4.17.1",
     "helmet": "^3.21.2",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.19.5",
     "knex-cleaner": "^1.3.0",
+    "markdown": "^0.5.0",
     "morgan": "^1.9.1",
     "pg": "^7.12.1",
     "sqlite3": "^4.1.0"
