--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "test": "cross-env DB_ENV=testing jest --watch",
     "start": "node index.js",
     "server": "nodemon index.js"
   },
@@ -24,12 +25,15 @@
     "sqlite3": "^4.1.0"
   },
   "devDependencies": {
-    "cross-env": "^6.0.0",
+    "cross-env": "^6.0.3",
     "jest": "^24.9.0",
     "nodemon": "^1.19.4",
     "supertest": "^4.0.2"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "jest": {
+    "testEnvironment": "node"
+  }
 }
